[ #1832, LaTeX backend ] Indentation is handled differently.

--- a/test/LaTeXAndHTML/succeed/Indenting2.tex
+++ b/test/LaTeXAndHTML/succeed/Indenting2.tex
@@ -7,11 +7,11 @@
 \begin{code}%
 \>[0]\AgdaKeyword{data} \AgdaDatatype{Nat} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaKeyword{where}\<%
 \\
-\>[0]\AgdaIndent{}\<[2]%
+\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
 \>[2]\AgdaInductiveConstructor{zero} \<[8]%
 \>[8]\AgdaSymbol{:} \AgdaDatatype{Nat}\<%
 \\
-\>[0]\AgdaIndent{}\<[2]%
+\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
 \>[2]\AgdaInductiveConstructor{suc} \<[8]%
 \>[8]\AgdaSymbol{:} \AgdaDatatype{Nat} \AgdaSymbol{->} \AgdaDatatype{Nat}\<%
 \end{code}
