--- a/test/LaTeXAndHTML/succeed/Indenting4.tex
+++ b/test/LaTeXAndHTML/succeed/Indenting4.tex
@@ -9,10 +9,10 @@
 \end{code}
 
 \begin{code}%
-\>[0]\AgdaIndent{}\<[2]%
+\>[0][@{}l@{\AgdaIndent{1}}]\<[2]%
 \>[2]\AgdaFunction{Pow} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaSymbol{→} \AgdaPrimitiveType{Set₁}\<%
 \\
-\>[0]\AgdaIndent{}\<[2]%
+\>[0][@{}l@{\AgdaIndent{1}}]\<[2]%
 \>[2]\AgdaFunction{Pow} \AgdaBound{X} \AgdaSymbol{=} \AgdaBound{X} \AgdaSymbol{→} \AgdaPrimitiveType{Set}\<%
 \end{code}
 
