--- a/test/LaTeXAndHTML/succeed/Issue1241.tex
+++ b/test/LaTeXAndHTML/succeed/Issue1241.tex
@@ -15,7 +15,7 @@ This is the actual test.
 \\
 \>[0]\AgdaKeyword{postulate}\<%
 \\
-\>[0]\AgdaIndent{}\<[2]%
+\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
 \>[2]\AgdaPostulate{IsThisCorrectlyLaTeXed} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
 \end{code}
 
