--- a/test/LaTeXAndHTML/succeed/TeXExtension.tex
+++ b/test/LaTeXAndHTML/succeed/TeXExtension.tex
@@ -12,21 +12,21 @@ Foo
 \\
 %
 \\
-\>[0]\AgdaIndent{}\<[2]%
+\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
 \>[2]\AgdaKeyword{data} \AgdaDatatype{Bool} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaKeyword{where}\<%
 \\
-\>[2]\AgdaIndent{}\<[4]%
+\>[2][@{}l@{\AgdaIndent{0}}]\<[4]%
 \>[4]\AgdaInductiveConstructor{true} \AgdaSymbol{:} \AgdaDatatype{Bool}\<%
 \\
-\>[2]\AgdaIndent{}\<[4]%
+\>[2][@{}l@{\AgdaIndent{0}}]\<[4]%
 \>[4]\AgdaInductiveConstructor{false} \AgdaSymbol{:} \AgdaDatatype{Bool}\<%
 \\
 %
 \\
-\>[0]\AgdaIndent{}\<[2]%
+\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
 \>[2]\AgdaFunction{b} \AgdaSymbol{:} \AgdaDatatype{Bool}\<%
 \\
-\>[0]\AgdaIndent{}\<[2]%
+\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
 \>[2]\AgdaFunction{b} \AgdaSymbol{=} \AgdaInductiveConstructor{false}\<%
 \\
 \>[0]\<%
