--- a/test/LaTeXAndHTML/succeed/UnicodeInput.tex
+++ b/test/LaTeXAndHTML/succeed/UnicodeInput.tex
@@ -9,7 +9,7 @@
 \\
 \>[0]\AgdaKeyword{postulate}\<%
 \\
-\>[0]\AgdaIndent{}\<[2]%
+\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
 \>[2]\AgdaPostulate{→⇒⇛⇉⇄↦⇨↠⇀⇁} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
 \end{code}
 
