--- a/test/LaTeXAndHTML/succeed/Grapheme-clusters.tex
+++ b/test/LaTeXAndHTML/succeed/Grapheme-clusters.tex
@@ -7,14 +7,14 @@
 \AgdaPostulate{A} and \AgdaPostulate{B} should be aligned.
 
 \begin{code}%
-\>[0]\AgdaIndent{}\<[2]%
+\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
 \>[2]\AgdaKeyword{postulate}\<%
 \\
-\>[2]\AgdaIndent{}\<[4]%
+\>[2][@{}l@{\AgdaIndent{0}}]\<[4]%
 \>[4]\AgdaPostulate{+̲+̲+̲+̲+̲+̲} \<[12]%
 \>[12]\AgdaPostulate{A}\<%
 \\
-\>[4]\AgdaIndent{}\<[12]%
+\>[4][@{}l@{\AgdaIndent{0}}]\<[12]%
 \>[12]\AgdaPostulate{B} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
 \end{code}
 
