--- a/test/LaTeXAndHTML/succeed/Legacy-AgdaIndent.tex
+++ b/test/LaTeXAndHTML/succeed/Legacy-AgdaIndent.tex
@@ -10,7 +10,7 @@
 \begin{code}%
 \>[0]\AgdaKeyword{postulate}\<%
 \\
-\>[0]\AgdaIndent{}\<[2]%
+\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
 \>[2]\AgdaPostulate{Whatever} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
 \end{code}
 
