--- a/test/LaTeXAndHTML/succeed/OneSpaceIndent.tex
+++ b/test/LaTeXAndHTML/succeed/OneSpaceIndent.tex
@@ -18,14 +18,15 @@ Text1
 \\
 %
 \\
-\>[0] \AgdaKeyword{postulate}\<%
+\>[0][@{}l@{\AgdaIndent{0}}]\<[1]%
+\>[1]\AgdaKeyword{postulate}\<%
 \end{code}
 }
 
 Text2
 
 \begin{code}%
-\>[0]\AgdaIndent{}\<[2]%
+\>[1][@{}l@{\AgdaIndent{1}}]\<[2]%
 \>[2]\AgdaPostulate{Base} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
 \end{code}
 
