--- a/test/LaTeXAndHTML/succeed/Tag.tex
+++ b/test/LaTeXAndHTML/succeed/Tag.tex
@@ -21,35 +21,35 @@
 \\
 \>[0]\AgdaKeyword{data} \AgdaDatatype{Cepa} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaKeyword{where}\<%
 \\
-\>[0]\AgdaIndent{}\<[2]%
+\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
 \>[2]\AgdaInductiveConstructor{cepa} \AgdaSymbol{:} \AgdaDatatype{Cepa}\<%
 \\
 %
 \\
 \>[0]\AgdaKeyword{record} \AgdaRecord{Depa} \AgdaSymbol{:} \AgdaPrimitiveType{Set₁} \AgdaKeyword{where}\<%
 \\
-\>[0]\AgdaIndent{}\<[2]%
+\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
 \>[2]\AgdaKeyword{field}\<%
 \\
-\>[2]\AgdaIndent{}\<[4]%
+\>[2][@{}l@{\AgdaIndent{0}}]\<[4]%
 \>[4]\AgdaField{depa} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
 \\
 %
 \\
 \>[0]\AgdaKeyword{postulate}\<%
 \\
-\>[0]\AgdaIndent{}\<[2]%
+\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
 \>[2]\AgdaPostulate{epa} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
 \\
 %
 \\
 \>[0]\AgdaKeyword{postulate}\<%
 \\
-\>[0]\AgdaIndent{}\<[2]%
+\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
 \>[2]\AgdaPostulate{α} \<[6]%
 \>[6]\AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
 \\
-\>[0]\AgdaIndent{}\<[2]%
+\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
 \>[2]\AgdaPostulate{\_∘\_} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
 \end{code}
 
