--- a/test/LaTeXAndHTML/succeed/Trailing-whitespace.tex
+++ b/test/LaTeXAndHTML/succeed/Trailing-whitespace.tex
@@ -9,12 +9,12 @@
 \begin{code}%
 \>[0]\AgdaKeyword{postulate}\<%
 \\
-\>[0] \<%
+\>[0]\<%
 \\
-\>[0]\AgdaIndent{}\<[2]%
-\>[2]\AgdaPostulate{A} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \<%
+\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
+\>[2]\AgdaPostulate{A} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
 \\
-\>[0]\AgdaIndent{}\<[2]%
+\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
 \>[2]\AgdaPostulate{B} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \<[11]%
 \>[11]\<%
 \end{code}
@@ -22,7 +22,7 @@
 \begin{code}%
 \>[0]\<%
 \\
-\>[0]\AgdaIndent{}\<[2]%
+\>[0][@{}l@{\AgdaIndent{1}}]\<[2]%
 \>[2]\<%
 \end{code}
 \hrule
@@ -37,17 +37,17 @@
 \end{code}
 \hrule
 \begin{code}%
-\>[0]\AgdaIndent{}\<[2]%
+\>[0][@{}l@{\AgdaIndent{1}}]\<[2]%
 \>[2]\<%
 \end{code}
 \hrule
   \begin{code}%
-\>[0]\AgdaIndent{}\<[2]%
+\>[0][@{}l@{\AgdaIndent{2}}]\<[2]%
 \>[2]\<%
 \end{code}
 \hrule
   \begin{code}%
-\>[0]\AgdaIndent{}\<[2]%
+\>[0][@{}l@{\AgdaIndent{3}}]\<[2]%
 \>[2]\<%
 \end{code}
 \hrule
