[ LaTeX backend ] The initial column is now always called "0".
Previously it was sometimes called ".".

--- a/test/LaTeXAndHTML/succeed/Indenting4.tex
+++ b/test/LaTeXAndHTML/succeed/Indenting4.tex
@@ -5,7 +5,7 @@
 \begin{document}
 
 \begin{code}%
-\>\AgdaKeyword{module} \AgdaModule{Indenting4} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module} \AgdaModule{Indenting4} \AgdaKeyword{where}\<%
 \end{code}
 
 \begin{code}%
