--- a/test/LaTeXAndHTML/succeed/Indenting7.tex
+++ b/test/LaTeXAndHTML/succeed/Indenting7.tex
@@ -3,7 +3,7 @@
 \begin{document}
 
 \begin{code}%
-\>\AgdaKeyword{module} \AgdaModule{Indenting7} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module} \AgdaModule{Indenting7} \AgdaKeyword{where}\<%
 \\
 %
 \\
