--- a/test/LaTeXAndHTML/succeed/InfixDeclaration.tex
+++ b/test/LaTeXAndHTML/succeed/InfixDeclaration.tex
@@ -4,27 +4,27 @@
 \begin{document}
 
 \begin{code}%
-\>\AgdaKeyword{module} \AgdaModule{InfixDeclaration} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module} \AgdaModule{InfixDeclaration} \AgdaKeyword{where}\<%
 \\
 %
 \\
-\>\AgdaKeyword{infix} \AgdaNumber{5} \AgdaDatatype{\_>>\_} \AgdaDatatype{\_<<\_}\<%
+\>[0]\AgdaKeyword{infix} \AgdaNumber{5} \AgdaDatatype{\_>>\_} \AgdaDatatype{\_<<\_}\<%
 \\
 %
 \\
-\>\AgdaKeyword{data} \AgdaDatatype{\_>>\_} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{data} \AgdaDatatype{\_>>\_} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaKeyword{where}\<%
 \\
-\>\AgdaKeyword{data} \AgdaDatatype{\_<<\_} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{data} \AgdaDatatype{\_<<\_} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaKeyword{where}\<%
 \\
-\>\<%
+\>[0]\<%
 \end{code}
 
 Let's try some infix declaration with surrounding text.
 
 \begin{code}%
-\>\AgdaKeyword{module} \AgdaModule{SurroundingText} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module} \AgdaModule{SurroundingText} \AgdaKeyword{where}\<%
 \\
-\>\<%
+\>[0]\<%
 \end{code}
 
 In the following, we declare the fixity of two operators.
