--- a/test/LaTeXAndHTML/succeed/Issue1618.tex
+++ b/test/LaTeXAndHTML/succeed/Issue1618.tex
@@ -6,9 +6,9 @@
 The let should be properly aligned in the following code:
 
 \begin{code}%
-\>\AgdaFunction{id} \AgdaSymbol{:} \AgdaSymbol{(}\AgdaBound{A} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\AgdaSymbol{)} \AgdaSymbol{→} \AgdaBound{A} \AgdaSymbol{→} \AgdaBound{A}\<%
+\>[0]\AgdaFunction{id} \AgdaSymbol{:} \AgdaSymbol{(}\AgdaBound{A} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\AgdaSymbol{)} \AgdaSymbol{→} \AgdaBound{A} \AgdaSymbol{→} \AgdaBound{A}\<%
 \\
-\>\AgdaFunction{id} \AgdaBound{A} \AgdaSymbol{=}\<%
+\>[0]\AgdaFunction{id} \AgdaBound{A} \AgdaSymbol{=}\<%
 \\
 \>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaKeyword{let}\<%
@@ -36,9 +36,9 @@ This should also work if the new block is following after the
 keyword, as opposed to on a new line.
 
 \begin{code}%
-\>\AgdaFunction{di} \AgdaSymbol{:} \AgdaSymbol{(}\AgdaBound{A} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\AgdaSymbol{)} \AgdaSymbol{→} \AgdaBound{A} \AgdaSymbol{→} \AgdaBound{A}\<%
+\>[0]\AgdaFunction{di} \AgdaSymbol{:} \AgdaSymbol{(}\AgdaBound{A} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\AgdaSymbol{)} \AgdaSymbol{→} \AgdaBound{A} \AgdaSymbol{→} \AgdaBound{A}\<%
 \\
-\>\AgdaFunction{di} \AgdaBound{A} \AgdaSymbol{=}\<%
+\>[0]\AgdaFunction{di} \AgdaBound{A} \AgdaSymbol{=}\<%
 \\
 \>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaKeyword{let} \<[7]%
