--- a/test/LaTeXAndHTML/succeed/Legacy-AgdaIndent.tex
+++ b/test/LaTeXAndHTML/succeed/Legacy-AgdaIndent.tex
@@ -8,7 +8,7 @@
 \begin{document}
 
 \begin{code}%
-\>\AgdaKeyword{postulate}\<%
+\>[0]\AgdaKeyword{postulate}\<%
 \\
 \>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaPostulate{Whatever} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
