--- a/test/LaTeXAndHTML/succeed/Multiline.tex
+++ b/test/LaTeXAndHTML/succeed/Multiline.tex
@@ -2,13 +2,13 @@
 \usepackage{agda}
 \begin{document}
 \begin{code}%
-\>\AgdaKeyword{open} \AgdaKeyword{import} \AgdaModule{Agda.Builtin.String}\<%
+\>[0]\AgdaKeyword{open} \AgdaKeyword{import} \AgdaModule{Agda.Builtin.String}\<%
 \\
 %
 \\
-\>\AgdaFunction{argh} \AgdaSymbol{:} \AgdaPostulate{String}\<%
+\>[0]\AgdaFunction{argh} \AgdaSymbol{:} \AgdaPostulate{String}\<%
 \\
-\>\AgdaFunction{argh} \AgdaSymbol{=} \<[8]%
+\>[0]\AgdaFunction{argh} \AgdaSymbol{=} \<[8]%
 \>[8]\AgdaString{"Hello,\textbackslash{}}\<%
 \\
 \>[0]\AgdaIndent{}\<[8]%
