--- a/test/LaTeXAndHTML/succeed/OneSpaceIndent.tex
+++ b/test/LaTeXAndHTML/succeed/OneSpaceIndent.tex
@@ -5,7 +5,7 @@
 
 \AgdaHide{
 \begin{code}%
-\>\AgdaKeyword{module} \AgdaModule{OneSpaceIndent} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module} \AgdaModule{OneSpaceIndent} \AgdaKeyword{where}\<%
 \end{code}
 }
 
@@ -14,11 +14,11 @@ Text1
 
 \AgdaHide{
 \begin{code}%
-\>\AgdaKeyword{module} \AgdaModule{Defs} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module} \AgdaModule{Defs} \AgdaKeyword{where}\<%
 \\
 %
 \\
-\> \AgdaKeyword{postulate}\<%
+\>[0] \AgdaKeyword{postulate}\<%
 \end{code}
 }
 
