--- a/test/LaTeXAndHTML/succeed/PatternSynonyms.tex
+++ b/test/LaTeXAndHTML/succeed/PatternSynonyms.tex
@@ -3,7 +3,7 @@
 \begin{document}
 
 \begin{code}%
-\>\AgdaKeyword{data} \AgdaDatatype{Nat} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{data} \AgdaDatatype{Nat} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaKeyword{where}\<%
 \\
 \>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaInductiveConstructor{zero} \AgdaSymbol{:} \AgdaDatatype{Nat}\<%
@@ -13,14 +13,14 @@
 \\
 %
 \\
-\>\AgdaKeyword{pattern} \AgdaInductiveConstructor{two} \<[14]%
+\>[0]\AgdaKeyword{pattern} \AgdaInductiveConstructor{two} \<[14]%
 \>[14]\AgdaSymbol{=} \AgdaInductiveConstructor{suc} \AgdaSymbol{(}\AgdaInductiveConstructor{suc} \AgdaInductiveConstructor{zero}\AgdaSymbol{)}\<%
 \\
-\>\AgdaKeyword{pattern} \AgdaInductiveConstructor{three} \AgdaSymbol{=} \AgdaInductiveConstructor{suc} \AgdaInductiveConstructor{two}\<%
+\>[0]\AgdaKeyword{pattern} \AgdaInductiveConstructor{three} \AgdaSymbol{=} \AgdaInductiveConstructor{suc} \AgdaInductiveConstructor{two}\<%
 \\
 %
 \\
-\>\AgdaKeyword{data} \AgdaDatatype{Bot} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{data} \AgdaDatatype{Bot} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaKeyword{where}\<%
 \end{code}
 
 \end{document}
