--- a/test/LaTeXAndHTML/succeed/PatternSynonyms2.tex
+++ b/test/LaTeXAndHTML/succeed/PatternSynonyms2.tex
@@ -3,7 +3,7 @@
 \begin{document}
 
 \begin{code}%
-\>\AgdaKeyword{data} \AgdaDatatype{Nat} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{data} \AgdaDatatype{Nat} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaKeyword{where}\<%
 \\
 \>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaInductiveConstructor{zero} \AgdaSymbol{:} \AgdaDatatype{Nat}\<%
@@ -13,7 +13,7 @@
 \\
 %
 \\
-\>\AgdaKeyword{module} \AgdaModule{\_} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module} \AgdaModule{\_} \AgdaKeyword{where}\<%
 \\
 %
 \\
@@ -26,7 +26,7 @@
 \\
 %
 \\
-\>\AgdaKeyword{data} \AgdaDatatype{Bot} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{data} \AgdaDatatype{Bot} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaKeyword{where}\<%
 \end{code}
 
 \end{document}
