--- a/test/LaTeXAndHTML/succeed/Tag.tex
+++ b/test/LaTeXAndHTML/succeed/Tag.tex
@@ -5,28 +5,28 @@
 \begin{document}
 
 \begin{code}%
-\>\AgdaKeyword{module} \AgdaModule{Tag} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module} \AgdaModule{Tag} \AgdaKeyword{where}\<%
 \\
 %
 \\
-\>\AgdaKeyword{module} \AgdaModule{Apa} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module} \AgdaModule{Apa} \AgdaKeyword{where}\<%
 \\
 %
 \\
-\>\AgdaFunction{bepa} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaSymbol{→} \AgdaPrimitiveType{Set}\<%
+\>[0]\AgdaFunction{bepa} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaSymbol{→} \AgdaPrimitiveType{Set}\<%
 \\
-\>\AgdaFunction{bepa} \AgdaBound{x} \AgdaSymbol{=} \AgdaBound{x}\<%
+\>[0]\AgdaFunction{bepa} \AgdaBound{x} \AgdaSymbol{=} \AgdaBound{x}\<%
 \\
 %
 \\
-\>\AgdaKeyword{data} \AgdaDatatype{Cepa} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{data} \AgdaDatatype{Cepa} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaKeyword{where}\<%
 \\
 \>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaInductiveConstructor{cepa} \AgdaSymbol{:} \AgdaDatatype{Cepa}\<%
 \\
 %
 \\
-\>\AgdaKeyword{record} \AgdaRecord{Depa} \AgdaSymbol{:} \AgdaPrimitiveType{Set₁} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{record} \AgdaRecord{Depa} \AgdaSymbol{:} \AgdaPrimitiveType{Set₁} \AgdaKeyword{where}\<%
 \\
 \>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaKeyword{field}\<%
@@ -36,14 +36,14 @@
 \\
 %
 \\
-\>\AgdaKeyword{postulate}\<%
+\>[0]\AgdaKeyword{postulate}\<%
 \\
 \>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaPostulate{epa} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
 \\
 %
 \\
-\>\AgdaKeyword{postulate}\<%
+\>[0]\AgdaKeyword{postulate}\<%
 \\
 \>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaPostulate{α} \<[6]%
