--- a/test/LaTeXAndHTML/succeed/TeXExtension.tex
+++ b/test/LaTeXAndHTML/succeed/TeXExtension.tex
@@ -6,9 +6,9 @@
 Foo
 
 \begin{code}%
-\>\<%
+\>[0]\<%
 \\
-\>\AgdaKeyword{module} \AgdaModule{TeXExtension} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module} \AgdaModule{TeXExtension} \AgdaKeyword{where}\<%
 \\
 %
 \\
@@ -29,7 +29,7 @@ Foo
 \>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaFunction{b} \AgdaSymbol{=} \AgdaInductiveConstructor{false}\<%
 \\
-\>\<%
+\>[0]\<%
 \end{code}
 
   c : Bool
