--- a/test/LaTeXAndHTML/succeed/Trailing-whitespace.tex
+++ b/test/LaTeXAndHTML/succeed/Trailing-whitespace.tex
@@ -7,9 +7,9 @@
 
 \hrule
 \begin{code}%
-\>\AgdaKeyword{postulate}\<%
+\>[0]\AgdaKeyword{postulate}\<%
 \\
-\> \<%
+\>[0] \<%
 \\
 \>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaPostulate{A} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \<%
@@ -20,20 +20,20 @@
 \end{code}
 \hrule
 \begin{code}%
-\>\<%
+\>[0]\<%
 \\
 \>[0]\AgdaIndent{}\<[2]%
 \>[2]\<%
 \end{code}
 \hrule
 \begin{code}%
-\>\<%
+\>[0]\<%
 \\
-\>\<%
+\>[0]\<%
 \end{code}
 \hrule
 \begin{code}%
-\>\<%
+\>[0]\<%
 \end{code}
 \hrule
 \begin{code}%
