--- a/test/LaTeXAndHTML/succeed/Indenting2.tex
+++ b/test/LaTeXAndHTML/succeed/Indenting2.tex
@@ -5,7 +5,7 @@
 \begin{document}
 
 \begin{code}%
-\>\AgdaKeyword{data} \AgdaDatatype{Nat} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{data} \AgdaDatatype{Nat} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaKeyword{where}\<%
 \\
 \>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaInductiveConstructor{zero} \<[8]%
