--- a/test/LaTeXAndHTML/succeed/Issue1241.tex
+++ b/test/LaTeXAndHTML/succeed/Issue1241.tex
@@ -9,11 +9,11 @@
 This is the actual test.
 
 \begin{code}%
-\>\AgdaKeyword{module} \AgdaSymbol{\_} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module} \AgdaSymbol{\_} \AgdaKeyword{where}\<%
 \\
 %
 \\
-\>\AgdaKeyword{postulate}\<%
+\>[0]\AgdaKeyword{postulate}\<%
 \\
 \>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaPostulate{IsThisCorrectlyLaTeXed} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
