--- a/test/LaTeXAndHTML/succeed/Issue2019.tex
+++ b/test/LaTeXAndHTML/succeed/Issue2019.tex
@@ -4,11 +4,11 @@
 \begin{document}
 
 \begin{code}%
-\>\AgdaComment{-- We use non-standard spaces between the name of the term and the}\<%
+\>[0]\AgdaComment{-- We use non-standard spaces between the name of the term and the}\<%
 \\
-\>\AgdaComment{-- colon.}\<%
+\>[0]\AgdaComment{-- colon.}\<%
 \\
-\>\AgdaKeyword{postulate}\<%
+\>[0]\AgdaKeyword{postulate}\<%
 \\
 \>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaPostulate{s00A0} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \<[15]%
