--- a/test/LaTeXAndHTML/succeed/UnicodeInput.tex
+++ b/test/LaTeXAndHTML/succeed/UnicodeInput.tex
@@ -3,11 +3,11 @@
 \begin{document}
 
 \begin{code}%
-\>\AgdaKeyword{data} \AgdaDatatype{αβγδεζθικλμνξρστυφχψω} \AgdaSymbol{:} \AgdaPrimitiveType{Set₁} \AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{data} \AgdaDatatype{αβγδεζθικλμνξρστυφχψω} \AgdaSymbol{:} \AgdaPrimitiveType{Set₁} \AgdaKeyword{where}\<%
 \\
 %
 \\
-\>\AgdaKeyword{postulate}\<%
+\>[0]\AgdaKeyword{postulate}\<%
 \\
 \>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaPostulate{→⇒⇛⇉⇄↦⇨↠⇀⇁} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
