[ LaTeX backend ] Fixed a bug.
If a code block started with an empty line containing trailing
whitespace, then the generated code was sometimes incorrect.

--- a/test/LaTeXAndHTML/succeed/Trailing-whitespace.lagda.tex
+++ b/test/LaTeXAndHTML/succeed/Trailing-whitespace.lagda.tex
@@ -33,5 +33,14 @@ postulate
   \begin{code}  
     \end{code}
 \hrule
+\begin{code}
+module _ where
+\end{code}
+\begin{code}
+  
+  postulate
+    C : Set
+\end{code}
+\hrule
 
 \end{document}
