--- a/test/LaTeXAndHTML/succeed/Trailing-whitespace.tex
+++ b/test/LaTeXAndHTML/succeed/Trailing-whitespace.tex
@@ -51,5 +51,18 @@
 \>[2]\<%
 \end{code}
 \hrule
+\begin{code}%
+\>[0]\AgdaKeyword{module} \AgdaModule{\_} \AgdaKeyword{where}\<%
+\end{code}
+\begin{code}%
+\>[0]\<%
+\\
+\>[0][@{}l@{\AgdaIndent{1}}]\<[2]%
+\>[2]\AgdaKeyword{postulate}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]\<[4]%
+\>[4]\AgdaPostulate{C} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
+\end{code}
+\hrule
 
 \end{document}
