[ LaTeX backend ] Small change to the treatment of trailing whitespace.
Previously an alignment column was set up, and sometimes indentation
generated, if the final line of a code block ended with at least two
trailing space characters. Now this should no longer happen.

--- a/test/LaTeXAndHTML/succeed/Relative-indentation.tex
+++ b/test/LaTeXAndHTML/succeed/Relative-indentation.tex
@@ -76,14 +76,12 @@ text \begin{code}%
 \end{code} more text
     also text  \begin{code}%
 \>[0][@{}l@{\AgdaIndent{1}}]\<[4]%
-\>[4]\AgdaKeyword{postulate} \AgdaPostulate{O} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \<[23]%
-\>[23]\<%
+\>[4]\AgdaKeyword{postulate} \AgdaPostulate{O} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
 \end{code} text again
 
  text          \begin{code}%
 \>[0][@{}l@{\AgdaIndent{2}}]\<[4]%
-\>[4]\AgdaKeyword{postulate} \AgdaPostulate{o} \AgdaSymbol{:} \AgdaPostulate{O} \<[23]%
-\>[23]\<%
+\>[4]\AgdaKeyword{postulate} \AgdaPostulate{o} \AgdaSymbol{:} \AgdaPostulate{O}\<%
 \end{code}   text             
 \end{AgdaAlign}
 
