--- a/test/LaTeXAndHTML/succeed/Trailing-whitespace.lagda.tex
+++ b/test/LaTeXAndHTML/succeed/Trailing-whitespace.lagda.tex
@@ -42,5 +42,16 @@ module _ where
     C : Set
 \end{code}
 \hrule
+\begin{AgdaAlign}
+\begin{code}
+postulate
+  F  : Set → Set
+  X  : F  
+\end{code}
+\begin{code}
+          A
+\end{code}
+\end{AgdaAlign}
+\hrule
 
 \end{document}
