[ LaTeX backend ] Documented a problem.

--- a/test/LaTeXAndHTML/succeed/Grapheme-clusters.tex
+++ b/test/LaTeXAndHTML/succeed/Grapheme-clusters.tex
@@ -4,8 +4,7 @@
 
 \begin{document}
 
-\AgdaPostulate{A} and \AgdaPostulate{B} should be aligned.
-
+\AgdaPostulate{A} and \AgdaPostulate{B} should be aligned:
 \begin{code}%
 \>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
 \>[2]\AgdaKeyword{postulate}\<%
@@ -16,6 +15,16 @@
 \\
 \>[4][@{}l@{\AgdaIndent{0}}]\<[12]%
 \>[12]\AgdaPostulate{B} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
+\end{code}
+
+The two \AgdaKeyword{field} keywords should not be aligned:
+\begin{code}%
+\>[0][@{}l@{\AgdaIndent{0}}]\<[2]%
+\>[2]\AgdaKeyword{record} \AgdaRecord{+̲} \AgdaSymbol{:} \AgdaPrimitiveType{Set₁} \AgdaKeyword{where} \<[25]%
+\>[25]\AgdaKeyword{field} \AgdaField{C} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
+\\
+\>[25][@{}l@{\AgdaIndent{0}}]\<[26]%
+\>[26]\AgdaKeyword{field} \AgdaField{D} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
 \end{code}
 
 \end{document}
